@@ -35,6 +35,7 @@ see the files COPYING3 and COPYING.RUNTIME respectively.  If not, see
 #include "objc-private/protocols.h" /* For __objc_protocols_init(),
 				       __objc_protocols_add_protocol()
 				       __objc_protocols_register_selectors() */
+#include "objc-private/accessors.h" /* For __objc_accessors_init() */
 
 /* The version number of this runtime.  This must match the number 
    defined in gcc (objc-act.c).  */
@@ -582,6 +583,7 @@ __objc_exec_class (Module_t module)
 					   (hash_func_type)objc_hash_ptr,
 					   objc_compare_ptrs);
       __objc_protocols_init ();
+      __objc_accessors_init ();
       __objc_sync_init ();
       previous_constructors = 1;
     }
